--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </a>
         </div>
         <div class="pb-3">
-            <span id="current-year" class="text-white-50">&copy; barik </span>
+            <span id="current-year" class="text-white-50">&copy; kkn-ppm ugm 2022 </span>
             <script>document.querySelector('#current-year').appendChild(document.createTextNode(new Date().getFullYear()))</script>
         </div>
     </footer>
