add prakatahduku and tentang section

--- a/index.html
+++ b/index.html
@@ -54,14 +54,40 @@
 
             </div>
         </div>
-        <div class="bgImage tebing d-flex flex-column justify-content-center will-fadeIn">
+        <div class="bgImage  d-flex flex-column justify-content-center will-fadeIn">
             <div>
-                <h1>home</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae culpa ducimus dolore ut dolorem,
-                    quae
-                    cumque magnam repellendus velit in quod hic modi alias, magni earum labore unde perferendis
-                    quibusdam.
+                <h2>Padukuhan Ngasem</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione ipsum, a exercitationem
+                    voluptatum perspiciatis possimus porro ad obcaecati, incidunt sint modi velit. Officia assumenda
+                    rerum tenetur eos nulla corporis.
+                    Illum corporis ipsa natus dignissimos eligendi dolore aperiam et, veniam, porro quibusdam eaque
+                    explicabo facilis eius, dolor repellat minus aliquid nemo! Placeat molestias aut dolores non omnis
+                    beatae commodi pariatur?
                 </p>
+            </div>
+        </div>
+        <div class="bgImage  d-flex align-items-center justify-content-center will-fadeIn">
+            <div class="kataDukuh">
+                <div>
+                    <div class="petikContainer">
+                        <span class="petik">"</span>
+                        <span class="petik">"</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione
+                        ipsum, a
+                        exercitationem
+                        voluptatum perspiciatis possimus porro ad obcaecati, incidunt sint modi velit. Officia assumenda
+                        rerum tenetur eos nulla corporis.
+                        Illum corporis ipsa natus dignissimos eligendi dolore aperiam et, veniam, porro quibusdam eaque
+                        explicabo facilis eius, dolor repellat minus aliquid nemo! Placeat molestias aut dolores non
+                        omnis
+                        beatae commodi pariatur?
+                    </p>
+                    <div class="dukuhName">
+                        <small>-Pak Suwarno-</small>
+                    </div>
+                </div>
+                <img class="potret" src="images/carter-baran-75IgLbgqRls-unsplash.jpg" alt="Dukuh Ngasem">
             </div>
         </div>
     </main>
