--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body class="d-flex flex-column vh-100">
     <nav class="navbar nav fixed-top navbar-expand-lg navbar-dark shadow-5-strong">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Ngasem</a>
+            <a class="navbar-brand" href="/tourism">Ngasem</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
