adding pranata dukuh

--- a/index.html
+++ b/index.html
@@ -73,15 +73,13 @@
                         <span class="petik">"</span>
                         <span class="petik">"</span>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione
-                        ipsum, a
-                        exercitationem
-                        voluptatum perspiciatis possimus porro ad obcaecati, incidunt sint modi velit. Officia assumenda
-                        rerum tenetur eos nulla corporis.
-                        Illum corporis ipsa natus dignissimos eligendi dolore aperiam et, veniam, porro quibusdam eaque
-                        explicabo facilis eius, dolor repellat minus aliquid nemo! Placeat molestias aut dolores non
-                        omnis
-                        beatae commodi pariatur?
+                    <p>assalamualaikum warahmatullahi wabarakatuh.
+                        Saya Suwarno selaku Kepala Dusun Ngasem, mewakili segenap masyarakat Ngasem mengucapkan terima
+                        kasih kepada Mahasiswa UGM yg telah hadir di wilayah kami untuk melaksanakan KKN. Kegiatan yang
+                        telah dilakukan KKN tentunya membawa banyak sekali pembelajaran bagi masyarakat kami. Besar
+                        harapan kami agar segala observasi, komunikasi, dan penelitian yang dilakukan dapat segera
+                        terealisasi dengan lancar sehingga bisa meningkat kesejahteraan warga, baik di Dusun Ngasem
+                        maupun Desa Tileng secara keseluruhan.
                     </p>
                     <div class="dukuhName">
                         <small>-Pak Suwarno-</small>
@@ -89,6 +87,7 @@
                 </div>
                 <img class="potret" src="images/carter-baran-75IgLbgqRls-unsplash.jpg" alt="Dukuh Ngasem">
             </div>
+
         </div>
     </main>
 
