tambah section(belum selesai)

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <span class="petik">"</span>
                         <span class="petik">"</span>
                     </div>
-                    <p>assalamualaikum warahmatullahi wabarakatuh.
+                    <p>Assalamualaikum warahmatullahi wabarakatuh.
                         Saya Suwarno selaku Kepala Dusun Ngasem, mewakili segenap masyarakat Ngasem mengucapkan terima
                         kasih kepada Mahasiswa UGM yg telah hadir di wilayah kami untuk melaksanakan KKN. Kegiatan yang
                         telah dilakukan KKN tentunya membawa banyak sekali pembelajaran bagi masyarakat kami. Besar
@@ -82,12 +82,16 @@
                         maupun Desa Tileng secara keseluruhan.
                     </p>
                     <div class="dukuhName">
-                        <small>-Pak Suwarno-</small>
+                        <small>-Bapak Suwarno-</small>
                     </div>
                 </div>
                 <img class="potret" src="images/carter-baran-75IgLbgqRls-unsplash.jpg" alt="Dukuh Ngasem">
             </div>
-
+        </div>
+        <div class="bgImage dancer  d-flex align-items-center justify-content-center will-fadeIn">
+            <div>
+                <h2>Tebing Tutup</h2>
+            </div>
         </div>
     </main>
 
