add potensi wisata

--- a/index.html
+++ b/index.html
@@ -88,9 +88,50 @@
                 <img class="potret" src="images/carter-baran-75IgLbgqRls-unsplash.jpg" alt="Dukuh Ngasem">
             </div>
         </div>
-        <div class="bgImage dancer  d-flex align-items-center justify-content-center will-fadeIn">
-            <div>
+        <div class="bgImage tebingTutup  d-flex align-items-center justify-content-center will-fadeIn">
+            <div class="description">
                 <h2>Tebing Tutup</h2>
+                <p>Dusun Ngasem merupakan dusun yang memiliki deretan tebing-tebing berbatasan dengan laut. Terdapat
+                    empat tebing yang terletak di Dusun Ngasem dari sisi timur ke barat meliputi Tebing Kijingan, Tebing
+                    Watusigar, Tebing Tutup, dan Tebing Pringkuku. Keempat tebing tersebut seluruhnya memiliki ciri khas
+                    tersendiri dengan landscape yang indah. Jalanan menuju tebing dikelilingi oleh lahan pertanian dan
+                    peternakan yang luas dan subur milik warga Dusun Ngasem. Disamping daya tarik pemandangannya,
+                    jajaran tebing-tebing di Dusun Ngasem juga menjadi spot warga dalam mencari hasil laut berupa
+                    lobster, kerang, kepiting, dan hasil laut lainnya. Sebagian masyarakat luar yang memiliki hobi
+                    memancing juga terkadang mengunjungi tebing di Dusun Ngasem saat musim penghujan.</p>
+                <a href="#" class="more">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+                        <path d="M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z" />
+                    </svg>
+                </a>
+            </div>
+        </div>
+        <div class="bgImage dancer  d-flex align-items-center justify-content-center will-fadeIn">
+            <div class="description">
+                <h2>Rasulan</h2>
+                <p>Rasulan merupakan kegiatan tahunan yang dilaksanakan di berbagai daerah di Gunungkidul tidak
+                    terkecuali di Dusun Ngasem. Rasulan dilaksanakan sebagai bentuk rasa syukur kepada Tuhan Yang Maha
+                    Esa atas rezeki hasil panen. Disamping itu, dalam kegiatan ini masyarakat juga memanjatkan doa
+                    kepada Tuhan YME agar terus dikaruniai limpahan rezeki, kesehatan, dan keselamatan. Rasulan juga
+                    sering disebut bersih dusun yang memiliki makna bahwa kegiatan ini harapannya memberikan keberkahan
+                    pada masyarakat dan menjauhkan dari malapetaka sehingga kehidupan masyarakat dapat tentram dan
+                    tenang.
+
+                </p>
+
+                <p>
+                    Di Dusun Ngasem, Rasulan juga menjadi ritual mendoakan leluhur yang telah mendahului. Waktu
+                    pelaksanaan Rasulan pun tidak boleh sembarangan dan harus sesuai dengan perhitungan tanggalan jawa.
+                    Rangkaian acara Rasulan di Dusun Ngasem meliputi pertunjukan ledhek, prosesi ngrancah, campursari,
+                    dan wayang kulit. Rosulan Dusun Ngasem juga diramaikan dengan adanya bazar atau stand umkm Tileng
+                    sekitarnya.
+                    Saat rasulan biasanya kerabat dari warga Dusun Ngasem berkunjung ke rumah dan warga pun memasak
+                    masakan khusus layaknya acara lebaran.</p>
+                <a href="#" class="more">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+                        <path d="M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z" />
+                    </svg>
+                </a>
             </div>
         </div>
     </main>
