--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="bgImage tebingTutup  d-flex align-items-center justify-content-center will-fadeIn">
             <div class="description">
-                <h2>Tebing Tutup</h2>
+                <h2>Tebing</h2>
                 <p>Dusun Ngasem merupakan dusun yang memiliki deretan tebing-tebing berbatasan dengan laut. Terdapat
                     empat tebing yang terletak di Dusun Ngasem dari sisi timur ke barat meliputi Tebing Kijingan, Tebing
                     Watusigar, Tebing Tutup, dan Tebing Pringkuku. Keempat tebing tersebut seluruhnya memiliki ciri khas
