add tentang kita

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </p>
             </div>
         </div>
-        <div class="bgImage  d-flex align-items-center justify-content-center will-fadeIn">
+        <div class="bgImage dukuhBackground  d-flex align-items-center justify-content-center will-fadeIn">
             <div class="kataDukuh">
                 <div>
                     <div class="petikContainer">
@@ -132,6 +132,34 @@
                         <path d="M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z" />
                     </svg>
                 </a>
+            </div>
+        </div>
+        <div class="bgImage  d-flex align-items-center justify-content-center will-fadeIn">
+            <div class="tentangKita">
+                <img class="subunitNgasem" src="images/subunitNgasem.jpg" alt="Subunit Ngasem">
+                <div>
+                    <p>
+                        Kami merupakan anggota sub unit KKN-PPM UGM Girisubo 2022 yang ditempatkan di Dusun Ngasem
+                        terdiri dari 6 orang yaitu Alifia dari prodi Manajemen dan Kebijakan Publik, Sasa dari prodi
+                        Sastra Inggris, Laila dari prodi Profesi Dokter, Rani dari prodi Fisika, Hafizhan dari prodi
+                        Sastra Arab dan Barik dari prodi Matematika. Kami melaksanakan KKN-PPM ini selama 50 hari dari
+                        25 Juni hingga 13 Agustus 2022.
+                    </p>
+
+                    <p>
+                        Tujuan kami melaksanakan KKN-PPM ini adalah untuk meningkatkan
+                        kualitas dan kesinambungan kegiatan KKN-PPM UGM di tengah masyarakat guna mewujudkan masyarakat
+                        yang tangguh, mandiri dan sejahtera; meningkatkan pemahaman dosen, mahasiswa, masyarakat dan
+                        para mitrakerja tentang pembangunan berkelanjutan yang tertuang dalam SGDs dan education for
+                        sustainable development (ESD) melalui implementasi KKN-PPM UGM; serta mempromosikan program
+                        KKN-PPM UGM sebagai wahana penyelesaian suatu permasalahan berbasis kearifan dan potensi lokal
+                        serta kerjasama kemitraan kepada masyarakat, pemerintah, dan pemangku kepentingan yang lain.
+                    </p>
+                    <!-- <div class="dukuhName">
+                        <small>-Bapak Suwarno-</small>
+                    </div> -->
+                </div>
+
             </div>
         </div>
     </main>
