add dukuh background

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link" href="#home">Home</a>
+                    <a class="nav-link" href="#home">Beranda</a>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Tentang Ngasem
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#petaWilayah">Peta Wilayah</a></li>
-                            <li><a class="dropdown-item" href="#tentangNgasem">Deskripsi</a></li>
-                            <li><a class="dropdown-item" href="#prakataDukuh">Prakata Dukuh</a></li>
+                            <li><a class="dropdown-item" href="#map">Peta Wilayah</a></li>
+                            <li><a class="dropdown-item" href="#description">Deskripsi</a></li>
+                            <li><a class="dropdown-item" href="#prakata">Prakata Dukuh</a></li>
 
                         </ul>
                     </li>
@@ -51,8 +51,8 @@
                             Potensi Wisata
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#potensiWisataTebing">Tebing</a></li>
-                            <li><a class="dropdown-item" href="#potensiWisataRasulan">Rasulan</a></li>
+                            <li><a class="dropdown-item" href="#cliff">Tebing</a></li>
+                            <li><a class="dropdown-item" href="#rasulan">Rasulan</a></li>
                         </ul>
                     </li>
                     <a class="nav-link" href="#aboutUs">About us</a>
@@ -68,7 +68,7 @@
                 <h1>Padukuhan Ngasem</h1>
             </div>
         </div>
-        <div id="petaWilayah" class="bgImage batas d-flex flex-column justify-content-center will-fadeIn">
+        <div id="mapNgasem" class="bgImage batas d-flex flex-column justify-content-center will-fadeIn">
             <div>
                 <h2>Peta Wilayah</h2>
             </div>
@@ -76,7 +76,7 @@
 
             </div>
         </div>
-        <div id="tentangNgasem" class="bgImage  d-flex flex-column justify-content-center will-fadeIn">
+        <div id="description" class="bgImage  d-flex flex-column justify-content-center will-fadeIn">
             <div>
                 <h2>Padukuhan Ngasem</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione ipsum, a exercitationem
@@ -88,8 +88,7 @@
                 </p>
             </div>
         </div>
-        <div id="prakataDukuh"
-            class="bgImage dukuhBackground  d-flex align-items-center justify-content-center will-fadeIn">
+        <div id="prakata" class="bgImage dukuhBackground  d-flex align-items-center justify-content-center will-fadeIn">
             <div class="kataDukuh">
                 <div>
                     <div class="petikContainer">
@@ -108,11 +107,10 @@
                         <small>-Bapak Suwarno-</small>
                     </div>
                 </div>
-                <img class="potret" src="images/carter-baran-75IgLbgqRls-unsplash.jpg" alt="Dukuh Ngasem">
+                <img class="potret" src="images/potretDukuh/PakDukuhCropped.jpg" alt="Dukuh Ngasem">
             </div>
         </div>
-        <div id="potensiWisataTebing"
-            class="bgImage tebingTutup  d-flex align-items-center justify-content-center will-fadeIn">
+        <div id="cliff" class="bgImage tebingTutup  d-flex align-items-center justify-content-center will-fadeIn">
             <div class="description">
                 <h2>Tebing</h2>
                 <p>Dusun Ngasem merupakan dusun yang memiliki deretan tebing-tebing berbatasan dengan laut. Terdapat
@@ -130,8 +128,7 @@
                 </a>
             </div>
         </div>
-        <div id="potensiWisataRasulan"
-            class="bgImage dancer  d-flex align-items-center justify-content-center will-fadeIn">
+        <div id="rasulan" class="bgImage dancer  d-flex align-items-center justify-content-center will-fadeIn">
             <div class="description">
                 <h2>Rasulan</h2>
                 <p>Rasulan merupakan kegiatan tahunan yang dilaksanakan di berbagai daerah di Gunungkidul tidak
