add more screen friendly

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body class="d-flex flex-column vh-100">
     <nav class="navbar nav fixed-top navbar-expand-lg navbar-dark shadow-5-strong">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/tourism">Ngasem</a>
+            <a class="navbar-brand" href="#home">Ngasem</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
                             Tentang Ngasem
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#map">Peta Wilayah</a></li>
+                            <li><a class="dropdown-item" href="#mapNgasem">Peta Wilayah</a></li>
                             <li><a class="dropdown-item" href="#description">Deskripsi</a></li>
                             <li><a class="dropdown-item" href="#prakata">Prakata Dukuh</a></li>
 
@@ -178,9 +178,7 @@
                         KKN-PPM UGM sebagai wahana penyelesaian suatu permasalahan berbasis kearifan dan potensi lokal
                         serta kerjasama kemitraan kepada masyarakat, pemerintah, dan pemangku kepentingan yang lain.
                     </p>
-                    <!-- <div class="dukuhName">
-                        <small>-Bapak Suwarno-</small>
-                    </div> -->
+
                 </div>
 
             </div>
