add bg deskripsi

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             </div>
         </div>
-        <div id="description" class="bgImage  d-flex flex-column justify-content-center will-fadeIn">
+        <div id="description" class="bgImage deskripsi d-flex flex-column justify-content-center will-fadeIn">
             <div>
                 <h2>Padukuhan Ngasem</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione ipsum, a exercitationem
