add arabic and turk lang

--- a/tr.html
+++ b/tr.html
@@ -38,7 +38,7 @@
                             Tentang Ngasem
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#mapNgasem">Peta Wilayah</a></li>
+                            <li><a class="dropdown-item" href="#mapNgasem">Bölge Haritası</a></li>
                             <li><a class="dropdown-item" href="#description">Deskripsi</a></li>
                             <li><a class="dropdown-item" href="#prakata">Prakata Dukuh</a></li>
 
@@ -77,14 +77,13 @@
     <main>
         <div id="home" class="bgImage tebing d-flex flex-column justify-content-center will-fadeIn">
             <div id="homeTitle">
-                <h2>Selamat Datang</h2>
-                <p>di</p>
-                <h1>Padukuhan Ngasem</h1>
+                <h2>Ngasem Köyü’ne</h2>
+                <h1>Hoş geldiniz!</h1>
             </div>
         </div>
         <div id="mapNgasem" class="bgImage batas d-flex flex-column justify-content-center will-fadeIn">
             <div>
-                <h2>Peta Wilayah</h2>
+                <h2>Bölge Haritası</h2>
             </div>
             <div id="map">
 
