--- a/ar.html
+++ b/ar.html
@@ -38,7 +38,7 @@
                             Tentang Ngasem
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#mapNgasem">Peta Wilayah</a></li>
+                            <li><a class="dropdown-item" href="#mapNgasem">خريطة الولاية</a></li>
                             <li><a class="dropdown-item" href="#description">Deskripsi</a></li>
                             <li><a class="dropdown-item" href="#prakata">Prakata Dukuh</a></li>
 
@@ -77,14 +77,14 @@
     <main>
         <div id="home" class="bgImage tebing d-flex flex-column justify-content-center will-fadeIn">
             <div id="homeTitle">
-                <h2>Selamat Datang</h2>
-                <p>di</p>
-                <h1>Padukuhan Ngasem</h1>
+                <h2>أهلا وسهلا بحضوركم</h2>
+                <p>إلى</p>
+                <h1>قرية نجاسيم</h1>
             </div>
         </div>
         <div id="mapNgasem" class="bgImage batas d-flex flex-column justify-content-center will-fadeIn">
             <div>
-                <h2>Peta Wilayah</h2>
+                <h2>خريطة الولاية</h2>
             </div>
             <div id="map">
 
