--- a/en.html
+++ b/en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -38,7 +38,7 @@
                             Tentang Ngasem
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#mapNgasem">Bölge Haritası</a></li>
+                            <li><a class="dropdown-item" href="#mapNgasem">Peta Wilayah</a></li>
                             <li><a class="dropdown-item" href="#description">Deskripsi</a></li>
                             <li><a class="dropdown-item" href="#prakata">Prakata Dukuh</a></li>
 
@@ -62,12 +62,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Bahasa
+                            Language
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/">Indonesia</a></li>
-                            <li><a class="dropdown-item" href="/en">Inggris</a></li>
-                            <li><a class="dropdown-item" href="/ar">Arab</a></li>
+                            <li><a class="dropdown-item" href="/">Bahasa</a></li>
+                            <li><a class="dropdown-item" href="/ar">Arabic</a></li>
+                            <li><a class="dropdown-item" href="/tr">Turki</a></li>
                         </ul>
                     </li>
                 </div>
@@ -77,13 +77,14 @@
     <main>
         <div id="home" class="bgImage tebing d-flex flex-column justify-content-center will-fadeIn">
             <div id="homeTitle">
-                <h2>Ngasem Köyü’ne</h2>
-                <h1>Hoş geldiniz!</h1>
+                <h2>Selamat Datang</h2>
+                <p>di</p>
+                <h1>Padukuhan Ngasem</h1>
             </div>
         </div>
         <div id="mapNgasem" class="bgImage batas d-flex flex-column justify-content-center will-fadeIn">
             <div>
-                <h1>Bölge Haritası</h1>
+                <h1>Peta Wilayah</h1>
             </div>
             <div id="map">
 
