--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                             Bahasa
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Inggris</a></li>
-                            <li><a class="dropdown-item" href="#">Arab</a></li>
-                            <li><a class="dropdown-item" href="#">Turki</a></li>
+                            <li><a class="dropdown-item" href="/en">Inggris</a></li>
+                            <li><a class="dropdown-item" href="/ar">Arab</a></li>
+                            <li><a class="dropdown-item" href="/tr">Turki</a></li>
                         </ul>
                     </li>
                 </div>
@@ -84,7 +84,7 @@
         </div>
         <div id="mapNgasem" class="bgImage batas d-flex flex-column justify-content-center will-fadeIn">
             <div>
-                <h2>Peta Wilayah</h2>
+                <h1>Peta Wilayah</h1>
             </div>
             <div id="map">
 
