repaired lang link

--- a/en.html
+++ b/en.html
@@ -65,9 +65,9 @@
                             Language
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/">Bahasa</a></li>
-                            <li><a class="dropdown-item" href="/ar">Arabic</a></li>
-                            <li><a class="dropdown-item" href="/tr">Turki</a></li>
+                            <li><a class="dropdown-item" href="/tourism/">Bahasa</a></li>
+                            <li><a class="dropdown-item" href="/tourism/ar">Arabic</a></li>
+                            <li><a class="dropdown-item" href="/tourism/tr">Turki</a></li>
                         </ul>
                     </li>
                 </div>
