--- a/ar.html
+++ b/ar.html
@@ -65,9 +65,9 @@
                             Bahasa
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/">Indonesia</a></li>
-                            <li><a class="dropdown-item" href="/en">Inggris</a></li>
-                            <li><a class="dropdown-item" href="/tr">Turki</a></li>
+                            <li><a class="dropdown-item" href="/tourism/">Indonesia</a></li>
+                            <li><a class="dropdown-item" href="/tourism/en">Inggris</a></li>
+                            <li><a class="dropdown-item" href="/tourism/tr">Turki</a></li>
                         </ul>
                     </li>
                 </div>
