fix link rasulan

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                             Bahasa
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/tourism/en">Inggris</a></li>
-                            <li><a class="dropdown-item" href="/tourism/ar">Arab</a></li>
-                            <li><a class="dropdown-item" href="/tourism/tr">Turki</a></li>
+                            <li><a class="dropdown-item" href="/tourism/rasulan/en">Inggris</a></li>
+                            <li><a class="dropdown-item" href="/tourism/rasulan/ar">Arab</a></li>
+                            <li><a class="dropdown-item" href="/tourism/rasulan/tr">Turki</a></li>
                         </ul>
                     </li>
                 </div>
@@ -163,7 +163,7 @@
                     sekitarnya.
                     Saat rasulan biasanya kerabat dari warga Dusun Ngasem berkunjung ke rumah dan warga pun memasak
                     masakan khusus layaknya acara lebaran.</p>
-                <a href="/tourism/rasulan/" class="more">
+                <a href="/tourism/rasulan" class="more">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
                         <path d="M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z" />
                     </svg>
