--- a/rasulan/index.html
+++ b/rasulan/index.html
@@ -24,14 +24,14 @@
 <body>
     <nav class="navbar nav fixed-top navbar-expand-lg navbar-dark shadow-5-strong scrolled">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#home">Ngasem</a>
+            <a class="navbar-brand" href="/tourism">Ngasem</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="#home">Beranda</a>
+                    <a class="nav-link" href="/tourism/#home">Beranda</a>
 
                 </div>
                 <div class="navbar-nav ms-auto">
